--- a/main.html
+++ b/main.html
@@ -7,13 +7,19 @@
 </head>
 
 <body>
-	<blockquote class="questions">
-		<p>Who was the first female to become the governor of an Indian state?</p>
+<blockquote class="questions">
+		
+<p>Who was the first female to become the governor of an Indian state?</p>
+</blockquotes>
+<blockquote class="questions">
 
-		<p>Who among first Woman to climb Mount Everest twice?</p>
+<p>Who among first Woman to climb Mount Everest twice?</p>
 
-		<p>Who is President of India?</p>
-	</blockquote>
+</blockquote>
+<blockquote class="questions">
+
+<p>Who is President of India?</p>
+</blockquote>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
