--- a/main.html
+++ b/main.html
@@ -9,9 +9,8 @@
 
 <body>
 <blockquote class="questions">
-		
-<p>Who was the first female to become the governor of an Indian state?</p>
-</blockquotes>
+		<p>Who was the first female to become the governor of an Indian state?</p>
+</blockquote>
 <blockquote class="questions">
 
 <p>Who among first Woman to climb Mount Everest twice?</p>
